--- a/functions/package.json
+++ b/functions/package.json
@@ -12,11 +12,13 @@
     "node": "8"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.1.6"
+    "firebase-functions-test": "^0.1.6",
+    "prettier": "^1.19.1"
   },
   "private": true
 }
