--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "apexcharts": "^3.19.3",
+    "moment": "^2.27.0",
     "next": "9.4.4",
     "react": "16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "16.13.1"
   }
 }
